fix mobile spacing

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 60px 48px 0 48px;
+  padding: 24px 48px 0 48px;
   position: relative;
   box-sizing: border-box;
 }
