--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -3,10 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 60px 24px 0 24px;
+  padding: 24px 24px 0 24px;
   position: relative;
   box-sizing: border-box;
-  margin-bottom: 96px;
+  margin-bottom: 112px;
 }
 
 .contact-content {
