--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 60px;
+  padding-top: 24px;
   position: relative;
   box-sizing: border-box;
   overflow: hidden;
